# PTOIE

./: README.md  pyproject.toml
OIE/: eval.py  predict.py  train.py
OIE/datasets/: conll2bioes.py  create_txt_csv.py  criar_corpus.py  main.py  match.py  merge_datasets.py
OIE/datasets/PTOIE/: README.md
OIE/datasets/PTOIE/Squadie-PT-BR/squad2/: README.md
OIE/datasets/PTOIE/Squadie-PT-BR/src/: main.py  tool_functions.py  vis.py
OIE/datasets/other_corpus/: gamalho.conll  pragmatic_ceten.conll  pragmatic_wiki.conll  pud_100.conll  pud_200.conll
OIE/datasets/other_corpus/mod/: gamalho.conll  pragmatic_ceten.conll  pragmatic_wiki.conll  pud_100.conll  pud_200.conll
OIE/datasets/saida_match/: PTOIE_corpus.txt  PTOIE_dev.txt  PTOIE_test.txt  PTOIE_train.txt  invalid.json  json_dump.json
OIE/trainers/: trainer.py
